Added banner picture and changed layout for it

--- a/Super_Shop/src/main/webapp/jsf/newTemplate.xhtml
+++ b/Super_Shop/src/main/webapp/jsf/newTemplate.xhtml
@@ -19,12 +19,11 @@
 
         <div id="wrapper" class="content_wrapper">
             <div id="banner" class ="banner">
-                <ui:insert name ="banner">Banner goes here</ui:insert>
+                <ui:insert name ="banner"><img src="../resources/Banner.png" /></ui:insert>
             </div>
             
             <div id ="content" class ="content_box">
                 <ui:insert name="content">Content</ui:insert>
-                
             </div>
             <div id ="content" class="content_info">
                     <ui:insert name="content_info">info</ui:insert>
