--- a/Super_Shop/src/main/webapp/jsf/test.xhtml
+++ b/Super_Shop/src/main/webapp/jsf/test.xhtml
@@ -12,7 +12,7 @@
             </ui:define>
 
             <ui:define name="banner">
-                banner
+                <img src="./../resources/img/Banner.png" />
             </ui:define>
 
             <ui:define name="content">
