Login CSS corrected, files renamed

--- a/Super_Shop/src/main/webapp/jsf/template.xhtml
+++ b/Super_Shop/src/main/webapp/jsf/template.xhtml
@@ -24,7 +24,7 @@
 
         <div id="wrapper" class="content_wrapper">
             <div id="banner" class ="banner">
-                <img src="./../resources/img/Banner.png" />
+                <a href="test.xhtml"><img src="./../resources/img/Banner.png" /></a>
             </div>
             
             <div id ="content" class ="content_box">
