added nonsense about page

--- a/Super_Shop/src/main/webapp/jsf/newTemplate.xhtml
+++ b/Super_Shop/src/main/webapp/jsf/newTemplate.xhtml
@@ -33,20 +33,20 @@
             <div id ="content" class="content_info">
                 <div class="info_block">
                     <table>
-                        <tr><th>About us</th></tr>
-                        <tr><td>LINK</td></tr>
-                        <tr><td>LINK</td></tr>
-                        <tr><td>LINK</td></tr>
-                        <tr><td>LINK</td></tr>
+                        <tr><th>Company</th></tr>
+                        <tr><td><a href="about.xhtml">About us</a></td></tr>
+                        <tr><td><br /></td></tr>
+                        <tr><td><br /></td></tr>
+                        <tr><td><br /></td></tr>
                     </table>
                 </div>
                 <div class="info_block">
                     <table>
                         <tr><th>Support</th></tr>
-                        <tr><td>LINK</td></tr>
-                        <tr><td>LINK</td></tr>
-                        <tr><td>LINK</td></tr>
-                        <tr><td>LINK</td></tr>
+                        <tr><td><br /></td></tr>
+                        <tr><td><br /></td></tr>
+                        <tr><td><br /></td></tr>
+                        <tr><td><br /></td></tr>
                     </table>
                 </div>
                 <div class="info_block">
