--- a/Super_Shop/src/main/webapp/jsf/about.xhtml
+++ b/Super_Shop/src/main/webapp/jsf/about.xhtml
@@ -8,11 +8,18 @@
         <ui:composition template="./newTemplate.xhtml">
 
             <ui:define name="top">
-                top
+                
             </ui:define>
 
             <ui:define name="content">
-                content
+                <h1>HELLO WORLD!</h1>
+                
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+                dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+                anim id est laborum
             </ui:define>
 
         </ui:composition>
