--- a/Super_Shop/src/main/webapp/jsf/template.xhtml
+++ b/Super_Shop/src/main/webapp/jsf/template.xhtml
@@ -43,7 +43,7 @@
                 <div class="info_block">
                     <table>
                         <tr><th>Support</th></tr>
-                        <tr><td><br /></td></tr>
+                        <tr><td><br /><a href="about.xhtml">FAQ</a></td></tr>
                         <tr><td><br /></td></tr>
                         <tr><td><br /></td></tr>
                         <tr><td><br /></td></tr>
