--- a/Super_Shop/src/main/webapp/jsf/template.xhtml
+++ b/Super_Shop/src/main/webapp/jsf/template.xhtml
@@ -45,7 +45,7 @@
                         <tr><th>Support</th></tr>
                         <tr><td><br /><a href="supportfaq.xhtml">FAQ</a></td></tr>
                         <tr><td><br /><a href="guarantee.xhtml">Guarantee</a></td></tr>
-                        <tr><td><br /></td></tr>
+                        <tr><td><br /><a href="returnrefund.xhtml">Returns and refunds</a></td></tr>
                         <tr><td><br /></td></tr>
                     </table>
                 </div>
