changed a typo that crashed the application

--- a/Super_Shop/src/main/webapp/jsf/login.xhtml
+++ b/Super_Shop/src/main/webapp/jsf/login.xhtml
@@ -6,7 +6,7 @@
 
     <body>
 
-        <ui:composition template="./newTemplate.xhtml">
+        <ui:composition template="./template.xhtml">
 
             <ui:define name="top">
 
