--- a/Super_Shop/src/main/webapp/jsf/products.xhtml
+++ b/Super_Shop/src/main/webapp/jsf/products.xhtml
@@ -1,7 +1,9 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://java.sun.com/jsf/facelets">
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:c="http://java.sun.com/jsp/jstl/core">
 
     <body>
 
@@ -12,6 +14,18 @@
             </ui:define>
 
             <ui:define name="content">
+                <!-- Category choice list -->
+                <ul class="inline">
+                    <li>SuperPants</li>
+                    <li>SuperJackets</li>
+                    <li>SuperShorts</li>
+                    <li>SuperShoes</li>
+                    <li>SuperSuits</li>
+                    <li>SuperShirts</li>
+                </ul>
+                
+                <!-- Loop through a list of product here and display them in a 
+                nice manner -->
                 
             </ui:define>
 
