Change title, banner link and clientside tabs

--- a/Super_Shop/src/main/webapp/jsf/products.xhtml
+++ b/Super_Shop/src/main/webapp/jsf/products.xhtml
@@ -19,7 +19,7 @@
 
             <ui:define name="content">
                
-                <ace:tabSet id="ProductSet" clientSide="false">
+                <ace:tabSet id="ProductSet" clientSide="true">
                     <ace:tabPane id="sale" label="SuperSale">
                         <!-- http://icefaces-showcase.icesoft.org/showcase.jsf?grp=aceMenu&exp=dataTableBean -->
                         <h:form id="form">
