--- a/Super_Shop/src/main/webapp/jsf/template.xhtml
+++ b/Super_Shop/src/main/webapp/jsf/template.xhtml
@@ -9,7 +9,7 @@
         <link href="./../resources/css/default.css" rel="stylesheet" type="text/css" />
         <link href="./../resources/css/cssLayout.css" rel="stylesheet" type="text/css" />
         <link href="./../resources/css/login.css" rel="stylesheet" type="text/css" />
-        <title>Facelets Template</title>
+        <title>Super Shop</title>
     </h:head>
 
     <h:body>
@@ -25,7 +25,7 @@
 
         <div id="wrapper" class="content_wrapper">
             <div id="banner" class ="banner">
-                <a href="test.xhtml"><img src="./../resources/img/Banner.png" /></a>
+                <a href="products.xhtml"><img src="./../resources/img/Banner.png" /></a>
             </div>
             
             <div id ="content" class ="content_box">
