Database connection and login are now working

--- a/Super_Shop/src/main/webapp/jsf/login.xhtml
+++ b/Super_Shop/src/main/webapp/jsf/login.xhtml
@@ -20,13 +20,13 @@
                     
                     <h:outputText value="Username:" />
                     <h:inputText label="Username"
-                       id="name" value="#{loginBean.username}"
+                       id="username" value="#{loginBean.username}"
                        required="true"/>
                     <h:message for="username" />
                     <br />
                     <h:outputText value="Password:" />
                     <h:inputText label="Password"
-                       id="price" value="#{loginBean.password}"
+                       id="password" value="#{loginBean.password}"
                        required="true"/>
                     <h:message for="password" />
                     
