--- a/Super_Shop/src/main/webapp/jsf/template.xhtml
+++ b/Super_Shop/src/main/webapp/jsf/template.xhtml
@@ -10,6 +10,7 @@
         <link href="./../resources/css/default.css" rel="stylesheet" type="text/css" />
         <link href="./../resources/css/cssLayout.css" rel="stylesheet" type="text/css" />
         <link href="./../resources/css/login.css" rel="stylesheet" type="text/css" />
+        <link href="./../resources/css/account.css" rel="stylesheet" type="text/css" />
         <title>Super Shop</title>
     </h:head>
 
@@ -23,7 +24,7 @@
 
                 <h:form style="float: left;">
                     <c:if test="#{loginBean.loggedIn == true}">
-                        <h:link value="#{loginBean.username}" outcome="products" style="font-style: italic;" />
+                        <h:link value="#{loginBean.username}" outcome="account" style="font-style: italic;" />
                         &nbsp;<h:commandLink value="Log out" action="#{loginBean.logout()}" />
                     </c:if>
                     <c:if test="#{loginBean.loggedIn == false}">
