added orderplaced page and a checkout backing bean

--- a/Super_Shop/src/main/webapp/jsf/template.xhtml
+++ b/Super_Shop/src/main/webapp/jsf/template.xhtml
@@ -32,7 +32,7 @@
                         &nbsp;or <h:link value="Register" outcome="register" />
                     </c:if>
                 </h:form>
-                &nbsp;<h:link value="Check out" outcome="products" style="float: right; margin-right: 1em;" />
+                &nbsp;<h:link value="Check out" outcome="checkout" style="float: right; margin-right: 1em;" />
                 &nbsp;<h:link value="Cart" outcome="products" style="float: right; margin-right: 1em;" />
                 &nbsp;<h:link value="Home" outcome="products" style="float: right; margin-right: 1em;" />
 
