added a link back to products from orderplaced

--- a/Super_Shop/src/main/webapp/jsf/orderplaced.xhtml
+++ b/Super_Shop/src/main/webapp/jsf/orderplaced.xhtml
@@ -20,6 +20,7 @@ and open the template in the editor.
                 
                 <h:outputText value="Thank you for ordering from Super Shop!"/><br/>
                 <h:outputText value="Your order will be sent to you as soon as possibe, have a supergreat day!"/>
+                <h:link value="Keep drowling at our superproducts" outcome="products"/>
                 
             </ui:define>
 
