Generic message page added

--- a/Super_Shop/src/main/webapp/jsf/account.xhtml
+++ b/Super_Shop/src/main/webapp/jsf/account.xhtml
@@ -23,7 +23,7 @@
                     
                         <h:outputText value="New Password:" class="usernamelabel"/>
                         <h:inputText label="newpassword"
-                           class="username" value="#{accountBean.password}"
+                           class="username" value="#{accountBean.newPassword}"
                            required="true"/>
                         <h:message for="newpassword" />
                         <h:outputText value="Confirmation Password:" class="passwordlabel"/>
