--- a/Super_Shop/src/main/webapp/jsf/template.xhtml
+++ b/Super_Shop/src/main/webapp/jsf/template.xhtml
@@ -11,6 +11,7 @@
         <link href="./../resources/css/cssLayout.css" rel="stylesheet" type="text/css" />
         <link href="./../resources/css/login.css" rel="stylesheet" type="text/css" />
         <link href="./../resources/css/account.css" rel="stylesheet" type="text/css" />
+        <link href="./../resources/css/notify.css" rel="stylesheet" type="text/css" />
         <title>Super Shop</title>
     </h:head>
 
