Added cart page and cart features

--- a/Super_Shop/src/main/webapp/jsf/template.xhtml
+++ b/Super_Shop/src/main/webapp/jsf/template.xhtml
@@ -33,7 +33,7 @@
                     </c:if>
                 </h:form>
                 &nbsp;<h:link value="Check out" outcome="checkout" style="float: right; margin-right: 1em;" />
-                &nbsp;<h:link value="Cart" outcome="products" style="float: right; margin-right: 1em;" />
+                &nbsp;<h:link value="Cart" outcome="cart" style="float: right; margin-right: 1em;" />
                 &nbsp;<h:link value="Home" outcome="products" style="float: right; margin-right: 1em;" />
 
             </div>
