Moved stock decrease to cart bean

--- a/Super_Shop/src/main/webapp/jsf/products.xhtml
+++ b/Super_Shop/src/main/webapp/jsf/products.xhtml
@@ -52,7 +52,7 @@
                                 <ace:column id="add" headerText="Add">
                                     <h:panelGrid styleClass="animationHolderParent">
                                         <h:panelGrid styleClass="animationHolder">
-                                            <h:commandLink action="#{cartBB.addProd(prod)}" actionListener="#{products.decrementStock(prod)}">
+                                            <h:commandLink action="#{cartBB.addProd(prod)}">
                                                 <h:graphicImage id="saleAddCell" value="./../resources/img/cart.png" height="75px"
                                                                 width="75px" />
                                             </h:commandLink>
