--- a/Super_Shop/src/main/webapp/jsf/products.xhtml
+++ b/Super_Shop/src/main/webapp/jsf/products.xhtml
@@ -52,10 +52,18 @@
                                 <ace:column id="add" headerText="Add">
                                     <h:panelGrid styleClass="animationHolderParent">
                                         <h:panelGrid styleClass="animationHolder">
-                                            <h:commandLink action="#{cartBB.addProd(prod)}">
-                                                <h:graphicImage id="saleAddCell" value="./../resources/img/cart.png" height="75px"
-                                                                width="75px" />
-                                            </h:commandLink>
+                                            <c:if test="#{prod.inStock == true}">
+                                                <h:commandLink action="#{cartBB.addProd(prod)}">
+                                                    <h:graphicImage id="saleAddCell" value="./../resources/img/cart.png" height="75px"
+                                                                    width="75px" />
+                                                </h:commandLink>
+                                            </c:if>
+                                            <c:if test="#{prod.inStock == false}">
+                                                <h:commandLink action="#{cartBB.addProd(prod)}">
+                                                    <h:graphicImage id="saleAddCell" value="./../resources/img/cart.png" height="75px"
+                                                                    width="75px" />
+                                                </h:commandLink>
+                                            </c:if>
                                             <ace:animation event="click" name="clip"/>
                                             <ace:animation event="click" name="highlight"/>
                                         </h:panelGrid>
