--- a/Super_Shop/src/main/webapp/jsf/supportfaq.xhtml
+++ b/Super_Shop/src/main/webapp/jsf/supportfaq.xhtml
@@ -13,13 +13,8 @@
 
             <ui:define name="content">
                 <h1>Frequently Asked Questions</h1>
-                
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-                dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-                anim id est laborum.
+                If you entered this page you are not super enough!
+                GET OUT OF HERE!!
             </ui:define>
 
         </ui:composition>
