added the supersale category to products

--- a/Super_Shop/src/main/webapp/jsf/products.xhtml
+++ b/Super_Shop/src/main/webapp/jsf/products.xhtml
@@ -25,7 +25,7 @@
                         <!-- http://icefaces-showcase.icesoft.org/showcase.jsf?grp=aceMenu&exp=dataTableBean -->
                         <h:form id="saleForm">
                             <ace:dataTable id="saleTable"
-                                           value="#{products.jackets}"
+                                           value="#{products.sale}"
                                            var="prod">
                                 
                                 <ace:column id="salePic" headerText="Picture">
